--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,30 @@
-.header-mussum {
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
+body {
+    background: #00000021;
+}
+
+.header-mussum{
+    background: white;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-links {
+    
+}
+
+.container-login {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+#logo-pamonha {
+    height: 50px;
+    border-radius: 50%;
 }
